[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/StyleWhiteBox.tres" type="StyleBox" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 103.0
margin_top = 186.0
margin_right = 225.0
margin_bottom = 216.0
text = "SEND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecevedMessages" type="RichTextLabel" parent="."]
margin_left = 19.0
margin_top = 12.0
margin_right = 304.0
margin_bottom = 127.0
custom_styles/normal = ExtResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendMessage" type="LineEdit" parent="."]
margin_left = 20.0
margin_top = 147.0
margin_right = 300.0
margin_bottom = 171.0
custom_styles/normal = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
